Fix top image being stretched

--- a/nullability-gentle/pandoc.css
+++ b/nullability-gentle/pandoc.css
@@ -277,6 +277,7 @@ div.csl-indent {
     margin-left: auto;
     margin-right: auto;
     height: 16em;
+    width: auto;
 }
 
 p:has(> .codelogo){
